# openmp-webserver

./: .gitignore  CMakeLists.txt  README.md
src/: backend_compare.cpp  backend_openmp.cpp  backend_openmp.h  backend_pthread.cpp  backend_pthread.h  backend_serial.cpp  backend_serial.h  data_processor.cpp  data_processor.h  epoll_server.cpp  epoll_server.h  http_parser.cpp  http_parser.h  legacy_backend_compare.cpp  logger.cpp  logger.h  main.cpp  processor.cpp  processor.h  server.cpp  server.h  thread_pool.cpp  thread_pool.h  user_repository.cpp  user_repository.h  web_app.cpp  web_app.h
tests/: README.md  compare_openmp.sh  webbench_access.sh  webbench_upload_download.sh
